Added option for specification of alpha channel type

--- a/pict2png.1
+++ b/pict2png.1
@@ -21,6 +21,8 @@ supports the following command line options.
 Delete the original PICT files as each is successfully converted to the PNG format (use with caution)
 .It Fl -dry-run
 Runs through the process of loading and converting each PICT file, but does not write out PNG file or delete the PICT files.
+.It Fl -alpha=TYPE
+Manually specify the type of alpha channel (none, unassociated, or associated).
 .It Fl -bkgnd-ratio=RATIO
 Adjust required ratio of detected background color to other background colors that may be present (defaults to 0.8)
 .It Fl -force
