--- a/pict2png.1
+++ b/pict2png.1
@@ -1,4 +1,4 @@
-.Dd February 13, 2010
+.Dd January 14, 2011
 .Dt pict2png 1
 .Os Darwin
 .Sh NAME
@@ -72,7 +72,7 @@ utility returns 0 on success, and >0 if an error occurs.
 .Sh AUTHOR
 Brian D. Wells <spam_brian@me.com>
 .Sh COPYRIGHT
-Copyright (C) 2010 Brian D. Wells
+Copyright (C) 2010, 2011 Brian D. Wells
 .Pp
 pict2png is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
